kubernetes/apps/overlays/dev/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: headlamp:networking.k8s.io/Ingress:headlamp/headlamp
  labels:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/version: 0.28.0
    helm.sh/chart: headlamp-0.28.0
  name: headlamp
  namespace: headlamp
spec:
  rules:
    - host: headlamp.balinese-pentatonic.ts.net
      http:
        paths:
          - backend:
              service:
                name: headlamp
                port:
                  number: 80
            path: /
            pathType: Prefix
